--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,32 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.sayac-container {
+  display: inline-flex;
+  align-items: center;
+  padding: 0 20px;
+  border-radius: 4px;
+  gap: 10px;
+  border: 1px solid #292929; 
+}
+.sayac-value {
+  padding: 20px;
+  font-weight: bold;
+  font-family: monospace;
+  font-size: 48px;
+}
+
+.siparis-container {
+  display: inline-flex;
+  align-items: center;
+  padding: 0 20px;
+  border-radius: 4px;
+  gap: 10px;
+  border: 1px solid #292929; 
+}
+
+
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
