--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #f9f9f9;
+  background-color: #FDC913;
   cursor: pointer;
   transition: border-color 0.25s;
 }
