--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,48 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.form-header {
+  width: 100%;
+  height: 200px;
+  background-color: #CE2829;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.form-header h1 {
+  display: flex;
+  justify-content: center;
+}
+.nav-menu {
+  display: flex;
+  margin-bottom: 4px;
+}
+.nav-menu a {
+  text-decoration: none;
+  color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.order-pizza-form {
+  max-width: 600px;
+  margin: 20px auto;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.order-pizza-form div {
+  margin-bottom: 20px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.form-group-row {
+  display: flex;
+  justify-content: space-between;
+}
+.form-label {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+.form-text {
+  display: block;
+  margin-bottom: 10px;
+}
+.form-check-label {
+  margin: 10px;
 }
 
 .sayac-container {
@@ -40,29 +67,4 @@
   border-radius: 4px;
   gap: 10px;
   border: 1px solid #292929; 
-}
-
-
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
