--- a/src/App.css
+++ b/src/App.css
@@ -53,12 +53,16 @@
   margin: 10px;
 }
 
+.payment-container{
+  display: flex;
+  justify-content: space-between;
+}
 .sayac-container {
-  display: inline-flex;
-  align-items: center;
+  display: block;
+  margin-right: 20px;
+  flex: 1;
   padding: 0 20px;
   border-radius: 4px;
-  gap: 10px;
   border: 1px solid #292929; 
 }
 .sayac-value {
@@ -69,6 +73,8 @@
 }
 
 .siparis-container {
+  margin-left: 20px;
+  flex: 2;
   display: inline-flex;
   align-items: center;
   padding: 0 20px;
