--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,10 @@
 .form-check-label {
   margin: 10px;
 }
+.invalid-feedback {
+  color: #CE2829;
+  margin-top: 20px;
+}
 
 .payment-container{
   display: flex;
@@ -61,24 +65,40 @@
   display: block;
   margin-right: 20px;
   flex: 1;
-  padding: 0 20px;
+  height: 3rem;
   border-radius: 4px;
   border: 1px solid #292929; 
+}
+.sayac-container form {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .sayac-value {
   padding: 20px;
   font-weight: bold;
   font-family: monospace;
-  font-size: 48px;
+  font-size: 16px;
 }
 
 .siparis-container {
   margin-left: 20px;
   flex: 2;
-  display: inline-flex;
   align-items: center;
   padding: 0 20px;
   border-radius: 4px;
   gap: 10px;
   border: 1px solid #292929; 
+}
+button {
+  background-color: #FDC913;
+  border-radius: 4px;
+  border: white;
+  width: 100%;
+  height: 3rem;
+  padding: 0;
+}
+button:hover {
+  background-color:#CE2829;
+  color: white;
 }
