--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,9 @@
   text-decoration: none;
   color: white;
 }
+.nav-menu a:hover{
+  font-weight: bold;
+}
 
 .order-pizza-form {
   max-width: 600px;
@@ -56,6 +59,12 @@
   color: #CE2829;
   margin-top: 20px;
 }
+.form-text-area{
+  width: 500px;
+}
+.ekMalzemeler {
+  align-items: center;
+}
 
 .payment-container{
   display: flex;
@@ -84,11 +93,30 @@
 .siparis-container {
   margin-left: 20px;
   flex: 2;
-  align-items: center;
-  padding: 0 20px;
+  align-items: flex-start;
+  padding: 20px;
   border-radius: 4px;
   gap: 10px;
-  border: 1px solid #292929; 
+  border: 1px solid #292929;
+  flex-direction: column; 
+}
+.siparis-container form{
+  flex: 1;
+  display: flex; 
+  flex-direction: column;
+}
+.siparis-container h2{
+  margin-bottom: 10px;
+}
+.siparis-container div {
+  display: flex;
+  justify-content: space-between; 
+  margin-bottom: 10px;
+  color: #292929; 
+}
+.siparis-container div:nth-child(3) {
+  color: #CE2829;
+  font-weight: bold;
 }
 button {
   background-color: #FDC913;
@@ -97,6 +125,7 @@ button {
   width: 100%;
   height: 3rem;
   padding: 0;
+  font-weight: bold;
 }
 button:hover {
   background-color:#CE2829;
