success şablon değişiklikleri

--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,11 @@ button:hover {
   justify-content: center;
   
 }
+.secondary-title{
+  font-family: Satisfy;
+  color: #FDC913;
+  font-size: 32px;
+}
 .success-page{
   background-color: #CE2829;
   color: white;
