--- a/src/App.css
+++ b/src/App.css
@@ -100,17 +100,6 @@
   border: 1px solid #292929;
   flex-direction: column; 
 }
-.siparis-container2{
-  margin-left: 20px;
-  flex: 2;
-  align-items: flex-start;
-  padding: 20px;
-  border-radius: 4px;
-  gap: 10px;
-  border: 1px solid white;
-  flex-direction: column; 
-  color:white;
-}
 .siparis-container form{
   flex: 1;
   display: flex; 
@@ -148,6 +137,7 @@ button:hover {
 .main-title {
   font-family: Roboto Condensed;
   font-size: 86px;
+  font-weight: 100;
   display: flex;
   justify-content: center;
   
@@ -157,19 +147,51 @@ button:hover {
   color: #FDC913;
   font-size: 32px;
 }
+
+/* SUCCESS PAGE */
 .success-page{
   background-color: #CE2829;
   color: white;
   display: flex;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   flex-direction: column;
   justify-content: flex-start;
 }
 .success-page img {
- margin: 115px;
+ margin: 56px;
 }
-.success-siparis-info{
+.siparis-alindi{
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+.siparis-alindi-info{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 50px;
+}
+.siparis-alindi-info h2:first-child{
+  margin-bottom: 100px;
+}
+
+.siparis-form-info{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.siparis-odeme-info{
+  display: flex;
+  align-items: flex-start;
+  margin: 50px 0px;
+  width: 100%;
+  padding: 20px;
+  border-radius: 4px;
+  gap: 10px;
+  border: 1px solid white;
+  flex-direction: column; 
+  color:white;
+
 }
