--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@
 .payment-container{
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 .sayac-container {
   display: block;
@@ -118,6 +119,8 @@
   color: #CE2829;
   font-weight: bold;
 }
+
+/* BUTONLAR*/
 button {
   background-color: #FDC913;
   border-radius: 4px;
@@ -134,6 +137,13 @@ button:hover {
 #anasayfa-buton{
   width: 100px;
 }
+#success-buton{
+  width: 150px;
+  margin-bottom: 100px;
+  font-weight: 400;
+}
+
+/* BAŞLIKLAR*/
 .main-title {
   font-family: Roboto Condensed;
   font-size: 86px;
@@ -166,32 +176,82 @@ button:hover {
   flex-direction: column;
   align-items: center;
   margin-top: 50px;
+  border-bottom: 1px solid white;
 }
 .siparis-alindi-info{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin-top: 50px;
+  width: 300px;
 }
 .siparis-alindi-info h2:first-child{
   margin-bottom: 100px;
+  font-size: 22px;
 }
-
 .siparis-form-info{
   display: flex;
   flex-direction: column;
-  width: 100%;
+}
+.siparis-form-info div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  font-size: 16px;
+}
+.siparis-form-info p:nth-child(even) {
+  font-weight: 700;
+  margin-left: 10px;
+}
+.siparis-form-info p:nth-child(odd) {
+  margin-left: 80px;
+  font-weight: 400;
 }
 .siparis-odeme-info{
-  display: flex;
-  align-items: flex-start;
   margin: 50px 0px;
   width: 100%;
-  padding: 20px;
+  padding: 30px;
   border-radius: 4px;
-  gap: 10px;
   border: 1px solid white;
-  flex-direction: column; 
   color:white;
+  font-size: 18px;
+  font-weight: 600;
+  height: 190px;
+}
+.siparis-odeme-info h3{
+  margin-bottom: 20px;
+}
+.siparis-odeme-info div{
+  margin-bottom: 20px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
+/*--------------------------------------- */
+/* MAIN PAGE */
+.main-nav {
+  width: 100%;
+  height: 100px;
+  padding: 10px 0;
+}
+.main-nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 20px;
+  display: flex; 
+  justify-content: space-evenly;
+}
+.main-nav a{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #292929;
+  font-weight: 500;
+  font-size: 18px;
+}
+.main-nav img {
+  width: 40px; 
+  height: 40px; 
 }
