--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,8 @@ button {
 button:hover {
   background-color:#CE2829;
   color: white;
+  cursor: pointer;
+  border: 1px solid white;
 }
 #anasayfa-buton{
   width: 100px;
@@ -250,8 +252,174 @@ button:hover {
   color: #292929;
   font-weight: 500;
   font-size: 18px;
+  border-radius: 50px;
+  padding: 10px 20px;
+}
+.main-nav a:hover{
+  border: 1px solid #FDC913;
 }
 .main-nav img {
   width: 40px; 
   height: 40px; 
+  margin-right: 5px;
+}
+
+/*--------------------------------------- */
+/* MAIN PAGE CARDS - GRID İLE*/
+
+.main-page{
+  background-color: #FAF7F2;
+  ;
+}
+.cards{
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 2rem;
+  height: 100%;
+  padding: 100px;
+}
+.overlay-content{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  text-align: start;
+}
+.card-1{
+  display: grid;
+  grid-row: span 2;
+  position: relative;
+}
+.card-2{
+  display: grid;
+  position: relative;
+}
+.card-1 img, .card-2 img {
+  border-radius: 30px;
+  object-fit: cover;
+}
+.card-button {
+  background-color: white;
+  color: #CE2829;
+  border: none;
+  padding: 10px 20px;
+  font-size: 14px;
+  width: 140px;
+  border-radius: 50px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.card-button:hover {
+  background-color: #FDC913;
+}
+.card-title{
+  color:  white;
+  font-size: 32px;
+}
+.card-1 h1{
+  font-size: 68px;
+  font-weight: 700;
+  font-family: Quattrocento;
+}
+.card-text{
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+/*--------------------------------------- */
+/* MAIN PAGE VİTRİN - GRID İLE*/
+.vitrin{
+  display: grid;
+  justify-items: center;
+}
+.secondary-nav {
+  width: 100%;
+  height: 100px;
+  padding: 10px;
+}
+.secondary-nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 20px;
+  display: flex; 
+  justify-content: space-evenly;
+}
+.secondary-nav a{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  border-radius: 50px;
+  background-color: white;
+  color: #292929;
+  font-weight: 500;
+  font-size: 18px;
+  padding: 10px 20px;
+}
+.secondary-nav a:hover{
+  background-color: #292929;
+  color: white;
+}
+.secondary-nav img {
+  width: 40px; 
+  height: 40px; 
+  margin-right: 5px;
+}
+.vitrin-card-container{
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
+  margin: 50px;
+}
+.vitrin-card-container p{
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+  font-weight: 400;
+}
+.vitrin-card-container p:last-child{
+  font-size: 18px;
+  font-weight: 600;
+}
+.vitrin-card-container h4{
+  font-size: 22px;
+  font-weight: 600;
+}
+.vitrin-cards {
+  display: flex;
+  justify-content: space-around;
+}
+
+/*--------------------------------------- */
+/* MAIN FOOTER*/
+
+footer {
+  background-color: #1A1A1A;
+  height: 500px;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+}
+footer div{
+  margin-top: 50px;
+}
+footer ul {
+  padding: 10px;
+}
+footer li{
+  text-decoration: none;
+}
+.secondary-footer{
+  height: 200px;
+  border-top: 1px solid white;
+  justify-content: flex-start;
+  align-items: center;
+}
+.secondary-footer p{
+  margin-left: 50px;
+}
+footer img{
+  padding: 5px;
 }
