--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .form-header {
   width: 100%;
-  height: 200px;
+  height: 100px;
   background-color: #CE2829;
   color: white;
   display: flex;
@@ -38,6 +38,14 @@
   display: flex;
   justify-content: space-between;
 }
+.bej-part{
+  background-color: #FAF7F2;
+  width: 100%;
+}
+
+
+
+
 .form-group-row {
   display: flex;
   justify-content: space-between;
