--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,12 @@
 }
 .nav-menu a {
   text-decoration: none;
-  color: white;
+  color: #292929;
+  margin: 50px 0;
 }
 .nav-menu a:hover{
   font-weight: bold;
+  color: #CE2829;
 }
 
 .order-pizza-form {
@@ -264,7 +266,8 @@ button:hover {
   padding: 10px 20px;
 }
 .main-nav a:hover{
-  border: 1px solid #FDC913;
+  background-color: #292929;
+  color: white;
 }
 .main-nav img {
   width: 40px; 
@@ -321,6 +324,7 @@ button:hover {
 
 .card-button:hover {
   background-color: #FDC913;
+  
 }
 .card-title{
   color:  white;
@@ -344,7 +348,6 @@ button:hover {
   justify-items: center;
 }
 .secondary-nav {
-  width: 100%;
   height: 100px;
   padding: 10px;
 }
