--- a/src/App.css
+++ b/src/App.css
@@ -265,26 +265,24 @@ button:hover {
   margin-left: 80px;
   font-weight: 400;
 }
+
+.siparis-odeme-container{
+  border-top: 1px solid white;
+  
+}
 .siparis-odeme-info{
   margin: 50px 0px;
-  width: 100%;
+  max-width: 700px;
   padding: 30px;
   border-radius: 4px;
   border: 1px solid white;
   color:white;
+  background-color: #CE2829;
   font-size: 18px;
   font-weight: 600;
-  height: 190px;
 }
 .siparis-odeme-info h3{
-  margin-bottom: 20px;
-}
-.siparis-odeme-info div{
-  margin-bottom: 20px;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: row;
-  justify-content: space-between;
+  margin-bottom: 40px;
 }
 
 /*--------------------------------------- */
