--- a/src/App.css
+++ b/src/App.css
@@ -490,12 +490,13 @@ footer div{
 }
 footer ul {
   padding: 10px;
+  list-style-type: none;
 }
 footer li{
   text-decoration: none;
 }
 .secondary-footer{
-  height: 200px;
+  height: 100px;
   border-top: 1px solid white;
   justify-content: flex-start;
   align-items: center;
